@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-15T01:41:03Z",
+  "timestamp" : "2025-06-19T01:24:57Z",
   "count_outdated" : 1865,
   "uniques_outdated" : 1105,
-  "count" : 1867,
-  "uniques" : 1107,
+  "count" : 1869,
+  "uniques" : 1108,
   "clones" : [
     {
       "timestamp": "2025-06-07T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
